# euler

./: .gitignore  README.md  problem_17.py  problem_2.py  problem_54.py  problem_60.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  utils.py
.github/workflows/: tests.yml
euler/: __init__.py  __main__.py  problem_1.py  problem_102.py  problem_17.py  problem_18.py  problem_2.py  problem_21.py  problem_22.py  problem_23.py  problem_24.py  problem_26.py  problem_27.py  problem_28.py  problem_29.py  problem_31.py  problem_32.py  problem_33.py  problem_34.py  problem_35.py  problem_36.py  problem_37.py  problem_38.py  problem_39.py  problem_4.py  problem_40.py  problem_41.py  problem_42.py  problem_43.py  problem_44.py  problem_45.py  problem_46.py  problem_47.py  problem_49.py  problem_54.py  problem_55.py  problem_60.py  problem_67.py  problem_75.py  problem_81.py  (+7 more)
tests/: conftest.py  test_problem_1.py  test_problem_102.py  test_problem_17.py  test_problem_18.py  test_problem_2.py  test_problem_21.py  test_problem_22.py  test_problem_23.py  test_problem_24.py  test_problem_26.py  test_problem_27.py  test_problem_28.py  test_problem_29.py  test_problem_31.py  test_problem_32.py  test_problem_33.py  test_problem_34.py  test_problem_35.py  test_problem_36.py  test_problem_37.py  test_problem_38.py  test_problem_39.py  test_problem_4.py  test_problem_40.py  test_problem_41.py  test_problem_42.py  test_problem_43.py  test_problem_44.py  test_problem_45.py  test_problem_46.py  test_problem_47.py  test_problem_49.py  test_problem_54.py  test_problem_55.py  test_problem_60.py  test_problem_67.py  test_problem_75.py  test_problem_81.py  test_problem_82.py  (+6 more)
