[tool.poetry]
name = "euler"
version = "0.5.0"
description = "Python implementations of Project Euler solutions."
authors = ["Julian Thomassie <julianthomassie@gmail.com>"]
repository = "https://github.com/jcthomassie/euler"
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
pyperclip = "^1.8.2"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
flake8-pyproject = "^1.2.3"
mypy = "^1.4.1"
types-requests = "^2.31.0.2"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
requests-mock = "^1.11.0"

[tool.poetry.scripts]
euler = 'euler.__main__:main'

[tool.isort]
src_paths = ["euler", "tests"]
profile = "black"

[tool.flake8]
max-line-length = 88
ignore = "E203, E266, E501, W503"
select = "B,C,E,F,W,T4,B9"
exclude = ["__pycache__", ".*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
allow_untyped_defs = false
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"