[tool.poetry]
name = "euler"
version = "0.5.0"
description = "Python implementations of Project Euler solutions."
authors = ["Julian Thomassie <julianthomassie@gmail.com>"]
repository = "https://github.com/jcthomassie/euler"
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<=3.12"
numpy = "^1.26.0"
pyperclip = "^1.8.2"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
mypy = "^1.5.1"
types-requests = "^2.31.0.8"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
requests-mock = "^1.11.0"
ruff = "^0.0.282"

[tool.poetry.scripts]
euler = 'euler.__main__:main'

[tool.ruff]
target-version = "py311"
select = ["E", "F", "W", "I001"]
ignore = ["E501"]
src = ["euler", "tests"]

[tool.ruff.isort]
known-first-party = ["euler"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
allow_untyped_defs = false
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
